--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             </div>
             <div class="about-right">
                 <!-- <h1>About <span>me</span></h1> -->
-                <p>I am an experienced Python Fullstack Developer with over a decade of professional expertise in the field. Throughout my career, I have had the privilege of collaborating with prestigious organizations, contributing to their success and growth.</p>
+                <p>I am a Python Fullstack Developer with six months of professional experience. Throughout my career, I have worked with prestigious organizations, contributing to their success and growth.</p>
                 <p>My passion for Backend development is not only reflected in my extensive experience but also in the enthusiasm and dedication I bring to each project.</p>
                 <div class="skills">
                     <div class="skill">
